<resources>
    <string name="app_name">智能家庭终端</string>
    <string-array name="service_array">
        <item>首页</item>
        <item>远程桌面</item>
        <item>PC应用平台</item>
        <item>个人设置</item>
        <item>应用助手</item>
        <item>退出</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="welcome_page01">"XenServer远程桌面\n"</string>
    <string name="welcome_start_btn">"进入远程桌面"</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登录</string>
    <string name="user_name">用户名：</string>
    <string name="user_password">密   码：</string>
    <string name="register">注册</string>
    <string name="title_activity_login_remote">LoginRemoteActivity</string>
    <string name="show_setting_table_item_mouse">鼠标</string>
    <string name="show_setting_table_item_keyboard">键盘</string>
    <string name="show_setting_table_item_keymouse">桌面</string>
    <string name="show_setting_table_item_miracast">投影</string>
    <string name="show_setting_table_main_page">终端</string>
    <string name="show_setting_table_item_setting">控制</string>
    <string name="show_setting_table_item_back">手柄</string>
    <string name="show_setting_table_item_home">主页</string>
    <string name="show_setting_table_item_exit_touch">退出</string>
    <string name="error_toast">抱歉，该设备不支持标准的无线投影功能.</string>
    <string name="text_keyboard">Keyboard</string>
    <string name="text_settings">Settings</string>
    <string name="text_get_server">Get server</string>
    <string name="text_help">Help</string>
    <string name="text_file_explorer">File explorer</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_explore_roots">Return to Root</string>
    <string name="text_help_description">Description :</string>
    <string name="text_help_usage">Usage :</string>
    <string name="text_help_install">Install :</string>
    <string name="text_help_contact">Contact :</string>
    <string name="text_help_description_content">Use your phone as a remote control device for your computer over Wifi and Bluetooth !\n\nMain features :\n - Mouse control (move, click and wheel)\n - Keyboard control\n - File explorer (view directories and launch files)\n - Secure (password) connection\n - Screen capture (but it is NOT a VNC viewer)\n</string>
    <string name="text_help_install_content">Download the server on :\nhttp://www.ControllerDroid.com\n</string>
    <string name="text_help_usage_content">Press, drag and hold the screen to move the mouse.\n\nTo click, just press briefly the screen.\n\nTo hold your click, press and hold the screen (do not move!).\nAfter the vibration, you can move.\nTo release your click, do a simple click.\n\nManual click buttons are available around the screen.\nHold a button one second, and it will stay pressed.\n\nTo use the mouse wheel, slide the right part of the screen (up and down).\n</string>
    <string name="text_help_contact_content">Website : http://www.ControllerDroid.com\nGroup / forum : http://group.ControllerDroid.com\nTwitter : @ControllerDroid\nEmail : htwiz2002@gmail.com (dev)</string>
    <string name="text_connection">Connection</string>
    <string name="text_connections">Connections</string>
    <string name="text_control">Control</string>
    <string name="text_advanced_control">Advanced control</string>
    <string name="text_sensitivity">Sensitivity</string>
    <string name="text_acceleration">Acceleration</string>
    <string name="text_buttons_size">Buttons size</string>
    <string name="text_wheel_bar_width">Wheel bar width</string>
    <string name="text_click_delay">Click delay</string>
    <string name="text_hold_delay">Hold delay</string>
    <string name="text_immobile_distance">Immobile distance</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_sound">Sound</string>
    <string name="text_vibration">Vibration</string>
    <string name="text_screen_capture">Screen capture</string>
    <string name="text_advanced_screen_capture">Advanced screen capture</string>
    <string name="text_capture_enabled">Capture enabled</string>
    <string name="text_capture_format">Capture format</string>
    <string-array name="screenCapture_format_id">
        <item>jpg</item>
        <item>png</item>
    </string-array>
    <string-array name="screenCapture_format_name">
        <item>JPG</item>
        <item>PNG</item>
    </string-array>
    <string-array name="screenCapture_scaling">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="screenCapture_zoom_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="screenCapture_zoom_name">
        <item>1x</item>
        <item>2x</item>
        <item>3x</item>
        <item>4x</item>
        <item>5x</item>
    </string-array>
    <string-array name="screenCapture_fps_name">
        <item>Max</item>
        <item>4 FPS</item>
        <item>2 FPS</item>
        <item>1 FPS</item>
        <item>1/2 FPS</item>
        <item>1/4 FPS</item>
    </string-array>
    <string-array name="screenCapture_fps_id">
        <item>10</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    <string name="text_cursor_enabled">Cursor enabled</string>
    <string name="text_cursor_size">Cursor size</string>
    <string name="text_miscellaneous">Miscellaneous</string>
    <string name="text_fullscreen">Fullscreen</string>
    <string name="text_keep_screen_on">Keep screen on</string>
    <string name="text_debug">Debug</string>
    <string name="text_first_run">First run</string>
    <string name="text_reset_preferences">Reset preferences</string>
    <string name="text_connection_established">Connection established</string>
    <string name="text_connection_closed">Connection closed</string>
    <string name="text_connection_refused">Connection refused or server unaccessible</string>
    <string name="text_illegal_connection_parameter">Illegal connection parameter</string>
    <string name="text_authentificated">Authentificated</string>
    <string name="text_not_authentificated">Not authentificated (wrong password)</string>
    <string name="text_bluetooth_not_available_version">Bluetooth is not available on your phone (only Android 2.0+)</string>
    <string name="text_bluetooth_not_available">Bluetooth is not available</string>
    <string name="text_bluetooth_not_enabled">Bluetooth is not enabled</string>
    <string name="text_bluetooth_remote_device_not_found">Remote bluetooth device not found</string>
    <string name="text_bluetooth_can_not_connect">Can not connect to remote bluetooth device</string>
    <string name="text_first_run_dialog">This is the first time you launched ControllerDroid.\nDo you want to read the help?</string>
    <string name="text_new_version_dialog">This is a new version of ControllerDroid.\nYou should update the server as well from :\nhttp://www.ControllerDroid.com</string>
    <string name="text_no_connection">No connection\nPress the \"Menu\" button to add a new one</string>
    <string name="text_no_connection_selected">No connection selected\nPress the \"Menu\" button\nSelect \"Connections\"</string>
    <string name="text_bluetooth_discovery_started">Bluetooth discovery started</string>
    <string name="text_bluetooth_discovery_finished">Bluetooth discovery finished</string>
    <string name="text_bluetooth_device_not_paired">Bluetooth device not paired\nYou should pair it manually</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="text_send">Send</string>
    <string name="text_new">New</string>
    <string name="text_connection_type">Connection type</string>
    <string-array name="connection_action_name">
        <item>Use</item>
        <item>Edit</item>
        <item>Remove</item>
    </string-array>
    <string name="text_wifi">Wifi</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_bluetooth_devices">Bluetooth devices</string>
    <string name="text_name">Name : </string>
    <string name="text_password">Password : </string>
    <string name="text_host">Host : </string>
    <string name="text_port">Port : </string>
    <string name="text_address">Address : </string>
    <string name="text_save">Save</string>
    <string name="text_new_connection">New connection</string>
    <string name="text_hint_host">192.168.x.x</string>
    <string name="text_screen_capture_zoom">Zoom Level</string>
    <string name="text_screen_capture_fps">Frames Per Second</string>
    <string name="text_hint_debug">Put extra information in the catlog</string>
    <string name="text_screen_capture_scale">Scaling</string>
    <string name="text_useEditText">Use a Text Field</string>
    <string name="text_backspace">BS</string>
    <string-array name="orientations">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="text_orientations">
        <item>Automatic</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string name="text_orientation">Set Screen Orientation</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_remove">Remove</string>
    <string name="text_edit">Edit</string>
    <string name="title_activity_projection">ProjectionActivity</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="application_control">应用控制</string>
    <string name="projection_previous">上一张</string>
    <string name="projection_next">下一张</string>
    <string name="projection_play">放映</string>
    <string name="projection_play_current">放映当前页</string>
    <string name="projection_exit">退出</string>
    <string name="system_control">系统控制</string>
    <string name="volume_increase">V+</string>
    <string name="volume_decrease">V-</string>
    <string name="volume_mute">Vx</string>
    <string name="power_off">关机</string>
    <string name="power_sleep">睡眠</string>
    <string name="power_lock">锁定</string>
    <string name="power_restart">重启</string>
    <string name="power_off_cancel">取消关机</string>
    <string name="power_off_sleep">休眠</string>
    <string name="windows_control">窗口控制</string>
    <string name="window_max">最大化</string>
    <string name="window_min">最小化</string>
    <string name="window_close">关闭窗口</string>
    <string name="window_switch_left">向左切换</string>
    <string name="window_switch_right">向右切换</string>
    <string name="window_desktop">显示桌面</string>
    <string name="browse_down">向下浏览</string>
    <string name="browse_up">向上浏览</string>
    <string name="browse_refresh">刷新</string>
    <string name="browse_close">关闭标签</string>
    <string name="browse_stop_refresh">停止刷新</string>
    <string name="browse_next_label">下一标签</string>
    <string name="browse_previous_label">上一标签</string>
    <string name="browse_homepage">主页</string>
    <string name="browse_search">搜索</string>
    <string name="browse_bookmark">书签</string>
    <string name="browse_fullscreen">全屏</string>
    <string name="title_activity_login_and_register">LoginAndRegisterActivity</string>
    <string name="title_activity_videos">视频</string>
</resources>