<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffF6F2ED"
    android:orientation="vertical"
    tools:context=".ProjectionActivity" >

    <Button
        android:id="@+id/ButtonProjectionPlay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@drawable/control_btn_click_normal"
        android:text="@string/projection_play" />

    <Button
        android:id="@+id/buttonProjectionPlayCurrent"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@drawable/control_btn_click_normal"
        android:text="@string/projection_play_current" />

    <Button
        android:id="@+id/buttonProjectionExit"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@drawable/control_btn_click_normal"
        android:text="@string/projection_exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonProjectionPrevious"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/projection_previous" />

        <Button
            android:id="@+id/buttonProjectionNext"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/projection_next" />
    </LinearLayout>

</LinearLayout>