<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutInput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WindowActivity" 
    android:background="#ffF6F2ED" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/ButtonWindowMax"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/window_max" />

        <Button
            android:id="@+id/ButtonWindowMin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/window_min" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/ButtonWindowSwitchLeft"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/window_switch_left" />

        <Button
            android:id="@+id/ButtonWindowSwitchRight"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/window_switch_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/ButtonWindowClose"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/window_close" />

        <Button
            android:id="@+id/ButtonWindowDesktop"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/window_desktop" />
    </LinearLayout>

</LinearLayout>