<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutInput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F2ED"
    android:orientation="vertical"
    tools:context=".SystemActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonPowerOff"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_off"
            android:textColor="@color/commo_text_color" />

        <Button
            android:id="@+id/ButtonPowerRestart"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_restart"
            android:textColor="@color/commo_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonPowerSleep"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_sleep"
            android:textColor="@color/commo_text_color" />

        <Button
            android:id="@+id/ButtonPowerSleepOff"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_off_sleep"
            android:textColor="@color/commo_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonPowerCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_cancel"
            android:textColor="@color/commo_text_color" />

        <Button
            android:id="@+id/ButtonPowerLock"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_lock"
            android:textColor="@color/commo_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/system_control"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/buttonSysVolumeUp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.34"
                android:background="@drawable/control_btn_click_normal"
                android:text="@string/volume_increase"
                android:textColor="@color/commo_text_color" />

            <Button
                android:id="@+id/buttonSysVolumeDown"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.33"
                android:background="@drawable/control_btn_click_normal"
                android:text="@string/volume_decrease"
                android:textColor="@color/commo_text_color" />

            <Button
                android:id="@+id/buttonSysVolumeMute"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.33"
                android:background="@drawable/control_btn_click_normal"
                android:text="@string/volume_mute"
                android:textColor="@color/commo_text_color" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>