<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutInput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PowerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonPowerOff"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_off" />

        <Button
            android:id="@+id/ButtonPowerRestart"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_restart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonPowerSleep"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_sleep" />

        <Button
            android:id="@+id/ButtonPowerSleepOff"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_off_sleep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonPowerCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_cancel" />

        <Button
            android:id="@+id/ButtonPowerLock"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/control_btn_click_normal"
            android:text="@string/power_lock" />
    </LinearLayout>

</LinearLayout>